[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/JumpForLeft_Grafiken/Buttons/links.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Manual_Screen.gd" type="Script" id=2]
[ext_resource path="res://Audio/ui_click_rollover_misc_01.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/JumpForLeft_Grafiken/Hintergruende/Menu/Background/full_BG.png" type="Texture" id=13]
[ext_resource path="res://Sprites/JumpForLeft_Grafiken/Hintergruende/Menu/Background/full_rahmen.png" type="Texture" id=14]

[node name="Manual" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grayscale" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 161.0
margin_top = 84.0
margin_right = -145.0
margin_bottom = -91.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -31.0
margin_right = 21.0
margin_bottom = 24.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManualScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 230.0
margin_top = 121.0
margin_right = -232.0
margin_bottom = -278.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManualCenterContainer" type="CenterContainer" parent="ManualScrollContainer"]
margin_right = 1458.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 270.0
margin_top = 858.0
margin_right = -274.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2"]
margin_left = 591.0
margin_right = 785.0
margin_bottom = 198.0
custom_constants/separation = 400

[node name="BackButton" type="TextureButton" parent="CenterContainer2/HBoxContainer"]
margin_right = 194.0
margin_bottom = 198.0
texture_normal = ExtResource( 1 )

[node name="Sound" type="AudioStreamPlayer" parent="CenterContainer2/HBoxContainer/BackButton"]
stream = ExtResource( 11 )

[connection signal="pressed" from="CenterContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
